--- a/data/local/build.gradle
+++ b/data/local/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 34
 
     defaultConfig {
         minSdk 26
@@ -30,6 +30,7 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_11.toString()
     }
+    namespace 'com.efabreu.copa.catar.local'
 }
 
 dependencies {
@@ -38,9 +39,9 @@ dependencies {
 
     implementation "androidx.datastore:datastore-preferences:1.0.0"
 
-    kapt "com.google.dagger:dagger-compiler:2.44"
-    implementation "com.google.dagger:dagger:2.44"
+    kapt 'com.google.dagger:dagger-compiler:2.48.1'
+    implementation 'com.google.dagger:dagger:2.48.1'
 
     testImplementation "junit:junit:4.13.2"
-    androidTestImplementation "androidx.test.ext:junit:1.1.3"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
 }
