feat: - usecases - viewmodel - main screen c/ compose

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,11 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.8.0'
     testImplementation "junit:junit:4.13.2"
 
+    //livedata
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.2"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation 'androidx.compose.runtime:runtime-livedata:1.5.3'
+
     // hilt
     implementation 'com.google.dagger:hilt-android:2.48.1'
     kapt 'com.google.dagger:hilt-compiler:2.48.1'
